--- a/SpareParts/Views/Vehicles/index.cshtml
+++ b/SpareParts/Views/Vehicles/index.cshtml
@@ -1,3 +1,22 @@
 @{
   Layout = "_Layout";
 }
+
+@using SpareParts.Models;
+
+<h1>Vehicles</h1>
+
+if (@Model.Count == 0)
+{
+  <h3>No Cars To View</h3>
+}
+
+<ul>
+  @foreach(Vehicle Vehicle in Model)
+  {
+    <li>@Html.ActionLink($"{vehicle.Model}", "Details", new { id = vehicle.VehicleId }) </li>
+  }
+</ul>
+
+<p>@Html.ActionLink("Add a Vehicle", "Create")</p>
+<p>@Html.ActionLink("Home", "Index", "Home")</p>
