--- a/SpareParts/Views/Vehicles/Create.cshtml
+++ b/SpareParts/Views/Vehicles/Create.cshtml
@@ -9,13 +9,13 @@
 
 @using (Html.BeginForm())
 {
-  @Html.Labelfor(model => model.Year)
+  @Html.LabelFor(model => model.Year)
   @Html.TextBoxFor(model => model.Year)
   
-  @Html.Labelfor(model => model.Make)
-  @Html.TextBoxFor(model => modelMake)
+  @Html.LabelFor(model => model.Make)
+  @Html.TextBoxFor(model => model.Make)
 
-  @Html.Labelfor(model => model.Model)
+  @Html.LabelFor(model => model.Model)
   @Html.TextBoxFor(model => model.Model)
 }
 
