--- a/SpareParts/Views/Vehicles/Edit.cshtml
+++ b/SpareParts/Views/Vehicles/Edit.cshtml
@@ -10,7 +10,7 @@
 
 @using (Html.BeginForm())
 {
-  @Html.HiddenFor(model => model.VehicleID)
+  @Html.HiddenFor(model => model.VehicleId)
 
   @Html.LabelFor(model => model.Model)
   @Html.EditorFor(model => model.Model)
