--- a/SpareParts/Views/Vehicles/index.cshtml
+++ b/SpareParts/Views/Vehicles/index.cshtml
@@ -12,7 +12,7 @@ if (@Model.Count == 0)
 }
 
 <ul>
-  @foreach(Vehicle Vehicle in Model)
+  @foreach(Vehicle vehicle in Model)
   {
     <li>@Html.ActionLink($"{vehicle.Model}", "Details", new { id = vehicle.VehicleId }) </li>
   }
