fixed bugs in database

--- a/SpareParts/Views/Vehicles/Create.cshtml
+++ b/SpareParts/Views/Vehicles/Create.cshtml
@@ -17,6 +17,8 @@
 
   @Html.LabelFor(model => model.Model)
   @Html.TextBoxFor(model => model.Model)
+
+  <input type="submit" value="Add new vehicle." />
 }
 
 <p>@Html.ActionLink("Show all Vehicles", "Index")</p>
