--- a/SpareParts/Views/Home/Index.cshtml
+++ b/SpareParts/Views/Home/Index.cshtml
@@ -3,3 +3,6 @@
 }
 
 <h1>Spare Parts Inventory</h1>
+
+<p>@Html.ActionLink("See all parts", "Index", "Parts")</p> 
+<p>@Html.ActionLink("See all vehicles", "Index", "Vehicles")</p>
