--- a/SpareParts/Views/Vehicles/index.cshtml
+++ b/SpareParts/Views/Vehicles/index.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Vehicles</h1>
 
-if (@Model.Count == 0)
+@if (@Model.Count == 0)
 {
   <h3>No Cars To View</h3>
 }
@@ -19,4 +19,3 @@ if (@Model.Count == 0)
 </ul>
 
 <p>@Html.ActionLink("Add a Vehicle", "Create")</p>
-<p>@Html.ActionLink("Home", "Index", "Home")</p>
